# openenclave-1

common/: attest_plugin.c  datetime.c  result.c
common/sgx/: collaterals.c  qeidentity.c  qeidentity.h  quote.c  quote.h  report.c  revocation.c  revocation.h
docs/DesignDocs/: CustomAttestation.md
enclave/: CMakeLists.txt  attest_plugin.c
enclave/core/sgx/: report.c
enclave/sgx/: report.c
host/: CMakeLists.txt
host/sgx/: hostverify_report.c  report.c
include/openenclave/: attestation_plugin.h  host.h
include/openenclave/bits/: attestation.h  report.h  result.h
include/openenclave/internal/: datetime.h  report.h
samples/attestation_plugin/: attestation_plugin.edl  common.h
samples/attestation_plugin/enclave/: Makefile  enc.c
samples/attestation_plugin/host/: Makefile  host.c
samples/attestation_plugin/plugin1/: plugin1.c  plugin1.h
samples/data-sealing/: CMakeLists.txt
samples/data-sealing/common/: CMakeLists.txt
samples/data-sealing/enclave_a_v1/: CMakeLists.txt
samples/data-sealing/enclave_a_v2/: CMakeLists.txt
samples/data-sealing/enclave_b/: CMakeLists.txt
samples/data-sealing/host/: CMakeLists.txt  host.cpp
samples/file-encryptor/: CMakeLists.txt
samples/file-encryptor/enclave/: CMakeLists.txt
samples/file-encryptor/host/: CMakeLists.txt
samples/helloworld/enclave/: CMakeLists.txt
samples/helloworld/host/: CMakeLists.txt
samples/local_attestation/: CMakeLists.txt
samples/local_attestation/common/: CMakeLists.txt
samples/local_attestation/enclave_a/: CMakeLists.txt
samples/remote_attestation/: CMakeLists.txt
(+6 files in other folders)
